Add prev/next button to Player

--- a/css/components.css
+++ b/css/components.css
@@ -196,3 +196,16 @@ dialog {
     background: var(--accent-color);
     color: #ffffff;
 }
+
+::-webkit-scrollbar {
+    width: 5px;
+    height: 5px;
+}
+
+::-webkit-scrollbar-track {
+    background: transparent;
+}
+
+::-webkit-scrollbar-thumb {
+    background: var(--accent-color);
+}
