--- a/windows/css/player.css
+++ b/windows/css/player.css
@@ -127,12 +127,16 @@ body {
                 display: none;
             }
 
-            > * > select {
+            & select {
                 position: absolute;
                 width: 40px;
                 height: 30px;
                 opacity: 0;
                 padding: 0;
+
+                & option:checked {
+                    background: var(--accent-color);
+                }
             }
             
             & input[type="range"].volume {
