--- a/windows/css/player.css
+++ b/windows/css/player.css
@@ -134,6 +134,14 @@ body {
                 opacity: 0;
                 padding: 0;
 
+                &[multiple] {
+                    position: fixed;
+                    width: 200px;
+                    height: 200px;
+                    opacity: 1;
+                    transform: translate(0, calc(-50% - 25px));
+                }
+
                 & option:checked {
                     background: var(--accent-color);
                 }
