Fix: Ghost clicks on Player

--- a/windows/css/player.css
+++ b/windows/css/player.css
@@ -238,6 +238,7 @@ body {
 
     & button img.fi{
         filter: invert(1);
+        pointer-events: none;
     }
 
     &[embed]:is(body):not(:is(:fullscreen, [splited_playing], [embed-fullscreen])) {
